JumpScript/tests/baselines/reference/missingReturnStatement.errors.txt
tests/cases/compiler/missingReturnStatement.jump(3,22): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.


==== tests/cases/compiler/missingReturnStatement.jump (1 errors) ====
    module Test {
        export class Bug {
            public foo():string {
                         ~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
            }
        }    
    }
    